dnl Process this file with autoconf to produce a configure script.
AC_INIT(README)

AM_INIT_AUTOMAKE(flextestsuit, 0.1)
AM_CONFIG_HEADER(config.h:config.in)

AC_PROG_RANLIB
AC_PROG_INSTALL
AC_LN_S
AC_PROG_YACC
AC_PROG_CC
AC_PROG_CXX

LEX=${srcdir}/flex
export LEX

dnl Checks for header files.

AC_CONST
AC_TYPE_SIZE_T
AC_HEADER_STDC
AC_HAVE_HEADERS(string.h malloc.h sys/types.h unistd.h)
AC_CHECK_HEADERS(malloc.h unistd.h)

dnl Checks for libraries.
dnl Replace `main' with a function in -lpthread:

AC_CHECK_LIB(pthread, pthread_create)

AC_OUTPUT(
Makefile
TEMPLATE/Makefile
test-array-nr/Makefile
test-array-r/Makefile
test-basic-nr/Makefile
test-basic-r/Makefile
test-bison-yylloc/Makefile
test-bison-yylval/Makefile
test-c-cpp-nr/Makefile
test-c-cpp-r/Makefile
test-header-nr/Makefile
test-header-r/Makefile
test-include-by-buffer/Makefile
test-include-by-reentrant/Makefile
test-multiple-scanners-nr/Makefile
test-multiple-scanners-r/Makefile
test-prefix-nr/Makefile
test-prefix-r/Makefile
test-pthread/Makefile
test-string-nr/Makefile
test-string-r/Makefile
test-yyextra/Makefile
)
